Actions
Bug #10027
closedloader: common/ufsread: variable 'indbuf' set but not used
Start date:
2018-12-03
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build error with warnings enabled:
../../../common/ufsread.c: In function 'inode_type': ../../../common/ufsread.c:182:8: warning: variable 'indbuf' set but not used [-Wunused-but-set-variable] void *indbuf; ^~~~~~
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 21368e40253d35b164340a2c37815fabb3e9a3d4
commit 21368e40253d35b164340a2c37815fabb3e9a3d4 Author: Toomas Soome <tsoome@me.com> Date: 2018-12-05T00:34:42.000Z 10027 loader: common/ufsread: variable 'indbuf' set but not used Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions