10027 loader: common/ufsread: variable 'indbuf' set but not used Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>